style: corrected bad and uneven marings and paddings

--- a/public/css/mainstyle.css
+++ b/public/css/mainstyle.css
@@ -3,14 +3,24 @@
 }
 
 * {
+    font-family: Lucida Console;
     box-sizing: border-box;
+    /* letter-spacing: 0.5rem;
+    line-height: 0.7rem; */
 }
 
 /* Why bootstrap? */
 p {
-    margin-top: 16px;
+    margin-top: 0.5rem;
 }
 
+b, strong {
+    font-weight: bolder;
+    font-weight: 500;
+}
+ .clientName {
+    font-size: 1.1rem;
+ }
 canvas {
     display: block;
     margin: 0;
@@ -21,7 +31,7 @@ canvas {
 h1 {
     text-align: center;
     font-weight: 900;
-    font-size: 2rem;
+    font-size: 1.7rem;
 }
 
 h2,
@@ -29,12 +39,17 @@ h3,
 h4,
 h5 {
     font-weight: 700 !important;
+    font-size: 1.4rem;
 }
 
 label {
     padding-bottom: 0.5rem;
 }
 
+header, #toolbar, #canvasToolBar {
+/* background-color: #194c7e !important; */
+background-color: #c0dbf6 !important;
+}
 #loginWrapper {
     display: flex;
     justify-content: center;
@@ -100,13 +115,17 @@ label {
 body,
 html {
     height: 100%;
+    background-color: #e9e9e9;
 }
 
 body {
     position: relative;
-    /* min-height: 100vh; */
-    /* padding-bottom: 70px; */
-    /* max-width: 1100px; */
+}
+
+.clientTime {
+    font-size: 0.8rem;
+    font-weight: 200;
+    color: pink;
 }
 
 #myCanvas {
@@ -124,11 +143,15 @@ body {
 
 
 .activeBtn {
-    color: var(--active-color);
+    color: #D8000C;
+}
+
+.activeBtn i {
+    color: #D8000C;
 }
 
 #toolbar {
-    font-size: 2rem;
+    font-size: 1.6rem;
 }
 
 .hidden {
@@ -139,8 +162,10 @@ body {
     background-color: darkgray;
 }
 
-#loadPreChatBtn {
-    margin-bottom: 0.9rem;
+#loadPreChatBtn, #loginBtn {
+    margin-bottom: 0.4rem;
+    width: 100%;
+    /* max-width: 250px; */
 }
 .clientImg {
     margin: 0.5rem 0;
@@ -161,7 +186,7 @@ body {
     overflow: scroll;
     display: flex;
     flex-direction: column;
-    padding: 0.2rem 0.4rem;
+    /* padding: 0.2rem 0.4rem; */
 }
 
 #chatContainer::-webkit-scrollbar {
@@ -169,7 +194,7 @@ body {
 }
 
 #typingContainer {
-    margin-top: 1rem;
+    margin-top: 2rem;
 }
 
 #chatSectionWrapper {
@@ -177,12 +202,12 @@ body {
     display: flex;
     justify-content: center;
     /* padding-bottom: 120px; */
-    padding-top: 1.5rem;
+    padding-top: 0.8rem;
     height: calc(100% - 150px);
 }
 
 #chatSection {
-    margin: 0.5rem 1rem 0.5rem 1rem;
+    margin: 0.4rem 1rem 0.4rem 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -206,9 +231,10 @@ body {
 #sendToWebserverBtn {
     cursor: pointer;
     border: none;
-    background-color: lightblue;
-    margin-left: 0.8rem;
-    padding: 0.5rem 1rem;
+    background-color: #F7B832;
+    margin-left: 0.2rem;
+    padding: 0.5rem 2rem;
+    font-size: 1.1rem;
 }
 
 #toolbar {
@@ -225,21 +251,21 @@ body {
 #msgImgInputRemove {
     text-align: end;
     color: red;
-    font-weight: 500;
     /* margin-left: 0.5rem; */
     cursor: pointer;
     text-decoration: underline;
- 
+    font-weight: 500;
 }
 #clientsOnlineConatiner {
     padding: 0 1.3rem 0.8rem 1.3rem;
 }
 #msgImgContainer {
     font-size: 0.8rem;
+    margin: 0 0 0.5rem 0;
 }
 .chatTemplateContainer {
-    margin: 0.4rem 0;
-    padding: 0.5rem 1rem;
+    margin: 0.2rem 0;
+    padding: 0.8rem 1.5rem;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 2px 7px 0px;
     border-radius: 3px;
 }
@@ -265,12 +291,19 @@ body {
     overflow-y: auto;
 }
 
+.usernamesOnline {
+    margin: 0.4rem 0;
+}
+
 #gallerySection::-webkit-scrollbar {
     display: none;
 }
 
 .smallHeaderText {
     width: 100%;
+    font-size: 0.8rem;
+    font-weight: 500;
+    color: #4782ba;
 }
 
 .closeSection {
@@ -279,7 +312,7 @@ body {
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    color: white;
+    /* color: white; */
 }
 
 .smallHeadingInfo {
@@ -293,7 +326,7 @@ body {
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    margin: 0 0 0.5rem 0;
+    margin: 0 0 0.8rem 0;
 }
 
 .offCanvasHeader {
@@ -356,7 +389,6 @@ img {
 }
 
 #canvasToolBar {
-    background-color: darkgray;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -392,7 +424,9 @@ img {
 }
 
 i {
+    color: #001d3a;
     cursor: pointer;
+    font-size: 1.5rem;
 }
 
 #canvasBrush {
@@ -438,7 +472,14 @@ button {
     border: none;
     border-radius: 3px;
     cursor: pointer;
-    padding: 0.4rem 0.7rem;
+    padding: 0.5rem 1.5rem;
+    background-color: #F7B832;
+    font-weight: 500;
+    font-size: 0.9rem;
+}
+
+.navbar-toggler-icon {
+    background-color: #F7B832;
 }
 
 #saveToDatabaseBtn {
@@ -449,7 +490,7 @@ button {
 @media only screen and (min-width: 393px) {
     #galleryList {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    }
+    }    
 }
 
 @media only screen and (min-width: 768px) {
